--- a/tests/runner.html
+++ b/tests/runner.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Airlock Test Runner</title>
+    <style> * { font-family: sans-serif; }</style>
     <script>
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-00000001-1']);
@@ -12,6 +13,6 @@
     <script src="../airlock.js" type="text/javascript"></script>
   </head>
   <body>
-
+    <b>Airlock Test Runner Online</b>
   </body>
 </html>
