reverting test runner ref to minned Airlock.

--- a/tests/runner.html
+++ b/tests/runner.html
@@ -10,7 +10,7 @@
       // this is needed for testing on localhost
       _gaq.push(['_set', 'uaDomain', 'none']);
     </script>
-    <script src="../airlock.min.js" type="text/javascript"></script>
+    <script src="../airlock.js" type="text/javascript"></script>
   </head>
   <body>
     <b>Airlock Test Runner Online</b>
